--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=Digital Garden
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=https://garden-lemon-one.vercel.app
+SITE_BASE_URL=https://garden-lemon-one.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
@@ -12,6 +12,8 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
